--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -4,7 +4,7 @@
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ads": "3.4.9",
     "com.unity.analytics": "3.3.5",
-    "com.unity.burst": "1.3.6",
+    "com.unity.burst": "1.3.7",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.entities": "0.14.0-preview.19",
     "com.unity.ide.rider": "1.2.1",
@@ -19,6 +19,8 @@
     "com.unity.platforms.linux": "0.8.0-preview.7",
     "com.unity.platforms.macos": "0.8.0-preview.7",
     "com.unity.platforms.windows": "0.8.0-preview.7",
+    "com.unity.probuilder": "4.4.0",
+    "com.unity.progrids": "3.0.3-preview.6",
     "com.unity.purchasing": "2.1.0",
     "com.unity.quicksearch": "1.5.4",
     "com.unity.render-pipelines.universal": "8.2.0",
