--- a/Assets/ScriptableObjects/PropHunt.Scriptable.asmdef
+++ b/Assets/ScriptableObjects/PropHunt.Scriptable.asmdef
@@ -1,3 +1,13 @@
-﻿{
-	"name": "PropHunt.Scriptable"
+{
+    "name": "PropHunt.Scriptable",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
