--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -10,7 +10,8 @@
         "PropHunt",
         "Unity.Transforms",
         "Unity.Mathematics",
-        "Unity.NetCode"
+        "Unity.NetCode",
+        "Unity.Rendering.Hybrid"
     ],
     "includePlatforms": [
         "Editor"
