--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -63,11 +63,11 @@ jobs:
             -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:-Unity.Entities.Tests.*,-Assembly*,-PropHunt.Generated,-PropHunt.Constants*;pathFilters:-*/Assets/NetCodeGenerated/*,-*/Assets/Tests/*
             -nographics
 
-      - name: Upload Results
-        uses: actions/upload-artifact@v1
-        with:
-          name: Test results for ${{ matrix.testMode }}
-          path: ${{ steps.tests.outputs.artifactsPath }}
+      # - name: Upload Results
+      #   uses: actions/upload-artifact@v1
+      #   with:
+      #     name: Test results for ${{ matrix.testMode }}
+      #     path: ${{ steps.tests.outputs.artifactsPath }}
       
       - name: Find Coverage
         run: |
