Client System Additional Tests (#109)
* Attempted to adjust compatability of .NET versions and update plugins

* Added unit tests for the connection system

* Fixed formatting in test files

* Added join game system tests

* Revamped systems to be more testsable and fixed tests for existing systems and added tests for MenuManager

* Adjusted formatting for MenuManagerSystemTests

* Removed newline at end of file from UnityService file

* Adjusted movement toggle test assertions

* Added constants namespace

* Adjusted test workflow file

* Adjusted paths to exclude tests assembly and folders

* Adjusted path filters for test file

* Adjusted path filters for extra files

* Corrected formatting of MenuScreenNames constants

* Added unit tests for UpdateMaterialShaderSystem

* Cleaned up test area and added tests for player input

* Improved test for sample player input and changed system

* Adjusted formatting of existing test files

* Created test report for debug

* Changed UpdateMaterialSystem to use update object methodology

* Updated debugging and adjusted material component test

* Improved coverage of menu manager with new updates

* Added movement state test

* Fixed connection and network tests with connection action

* Fixed status of test workflow

* Added html report for debug

* empty verification commit

* Attempted to update version of test runner

* Fixed formatting to improve test coverage (hopefully)

* Adjusted failing tests on server

* Removed upload artifacts step from test script

* Fixed errors in various systems for connection

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Pull lfs data, if not cached
         run: git lfs pull
 
-      - uses: webbertakken/unity-test-runner@v1.4
+      - uses: webbertakken/unity-test-runner@v1.7
         id: tests
         with:
           projectPath: ${{ matrix.projectPath }}
@@ -59,7 +59,8 @@ jobs:
           customParameters: |
             -enableCodeCoverage
             -coverageResultsPath ${{ matrix.testMode }}-artifacts
-            -coverageOptions generateBadgeReport;assemblyFilters:-PropHunt.Test*,-EditModeTests,-Assembly*,-PropHunt.Generated,-Unity.NetCode.Generated,-Unity.Transform.Generated;pathFilters:-*/Assets/NetCodeGenerated/*
+            -stackTraceLogType Full
+            -coverageOptions generateHtmlReport;generateBadgeReport;assemblyFilters:-Unity.Entities.Tests.*,-Assembly*,-PropHunt.Generated,-PropHunt.Constants*;pathFilters:-*/Assets/NetCodeGenerated/*,-*/Assets/Tests/*
             -nographics
 
       # - name: Upload Results
