Updated packages and fixed borken systems

--- a/Assets/NetCodeGenerated/Unity.NetCode.Generated/Unity.NetCode.Generated.asmdef
+++ b/Assets/NetCodeGenerated/Unity.NetCode.Generated/Unity.NetCode.Generated.asmdef
@@ -11,6 +11,7 @@
         "GUID:5f3cf485eb0554709a8abbeace890c86",
         "GUID:e04e6c86a9f3947eb95fded39f9e60cc",
         "GUID:363a3288c06c1c14cbbeedbda31215f9",
+        "GUID:8a2eafa29b15f444eb6d74f94a930e1d",
         "Unity.Networking.Transport"
     ],
     "includePlatforms": [
