Added tests for moving platform authoring component

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -4,6 +4,7 @@
         "Unity.Entities",
         "Unity.Entities.Tests",
         "Unity.Entities.Editor.Tests",
+        "Unity.Entities.Hybrid",
         "UnityEngine.TestRunner",
         "UnityEditor.TestRunner",
         "PropHunt.Tests.Utils",
