--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -12,6 +12,7 @@
         "Unity.Transforms",
         "Unity.Mathematics",
         "Unity.Physics",
+        "Unity.Networking.Transport",
         "Unity.NetCode",
         "Unity.Rendering.Hybrid"
     ],
