Game Flow and Command Tests (#139)
* Simplified join command and started parts of testing commands

* Adjusted command tests

* Added tests for game flow and overhauled the game flow network control settings

* Improved formatting of existing classes

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -9,9 +9,11 @@
         "UnityEditor.TestRunner",
         "PropHunt.Tests.Utils",
         "PropHunt",
+        "Unity.Collections",
         "Unity.Transforms",
         "Unity.Mathematics",
         "Unity.Physics",
+        "Unity.Networking.Transport",
         "Unity.NetCode",
         "Unity.Rendering.Hybrid"
     ],
