Added tests for shared materials

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -9,6 +9,7 @@
         "UnityEditor.TestRunner",
         "PropHunt.Tests.Utils",
         "PropHunt",
+        "PropHunt.Scriptable",
         "Unity.Collections",
         "Unity.Transforms",
         "Unity.Mathematics",
