Added verification of 100% sequence coverage for testing

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -107,7 +107,7 @@ jobs:
           repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
           allow-repeats: false # This is the default
       
-      # Skip assert coverage step for now
-      # - name: Assert Coverage
-      #   run: |
-      #     python3 -c "assert ${{ env.SEQUENCE_COVERAGE }} >= 95, 'Sequence coverage must be at least 95%, is only ${{ env.SEQUENCE_COVERAGE }}%'"
+      Skip assert coverage step for now
+      - name: Assert Coverage
+        run: |
+          python3 -c "assert ${{ env.SEQUENCE_COVERAGE }} >= 100, 'Sequence coverage must be 100%, is only ${{ env.SEQUENCE_COVERAGE }}%'"
