--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -92,7 +92,7 @@ jobs:
       #     expression: '//CoverageSession/Summary/@branchCoverage'
       
       - name: Parse Coverage
-        id: parsecoverage
+        id: ParseCoverage
         run: |
           echo ::set-output name=LINE_COVERAGE::$(cut -d "=" -f2- <<< ${{ steps.LineCoverage.outputs.result }})
       
@@ -101,7 +101,7 @@ jobs:
         with:
           message: |
             Test Coverage Results for ${{ matrix.testMode }}:
-            Line Coverage: ${{ steps.parsecoverage.outputs.LINE_COVERAGE }}%
+            Line Coverage: ${{ steps.ParseCoverage.outputs.LINE_COVERAGE }}%
             Link to run results: [https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           repo-token-user-login: 'github-actions[bot]' # The user.login for temporary GitHub tokens
@@ -109,4 +109,4 @@ jobs:
 
       - name: Assert Coverage
         run: |
-          python3 -c "assert ${{ env.LINE_COVERAGE }} >= 100, 'Line Coverage must be 100%, is only ${{ env.LINE_COVERAGE }}%'"
+          python3 -c "assert ${{ steps.ParseCoverage.outputs.LINE_COVERAGE }} >= 100, 'Line Coverage must be 100%, is only ${{ env.LINE_COVERAGE }}%'"
