Adding Tests for the Mixed Client Server Code (#150)
* Added test for the movement tracking system and component

* Created moving platform system and related tests

* Created tests for rotating platform system

* Created push force systems

* Added test for the KCCInputSystem

* Updated delta time mock to properly use time system for ECS

* Adjusted and started setup for KCCSystems

* Updated moving platofrm system to follow proper unity service model

* Undid some of the work with ICollisionWorld

* Remvoed ICollisionWorld

* added note to setup valid physics world

* Added todo note to remove the IPredictionState reference type

* Created player system to test KCC Grounded

* Added assert statements ot KCCSystemTests

* Started updating KCCSystem tests to start to include snap down systems

* Tests/player rotation test (#115)

* Adding Player Rotation System tests

* removing burst and parallel of method

* Formatted text

* fixing equals check to have two quaternions to compare"

* Fixed a typo in prediction manage

* Reorganized KCCSystemTests. Added tests for KCCSnapDownSystem

* Fixed incorrect variable usage in snap down long distance test

* Disabled burst compilation for unit test coverage reports

* Added tests for KCC Components and for constatns in KCCGrounded Test (#118)

* Added tests for KCC Components and for constatns in KCCGrounded Test

* Fixed formatting of existing tests

* KCC Push Overlapping Tests (#122)

* Added tests for push overlapping system

* Fixed formatting of some files

* Fixed comment for tests

* KCC Gravity Tests (#124)

* Adding KCC Gravity system tests

* formatting kcc system tests files

* Added to separate file

* Test/jumptests (#130)

* Adding KCC Gravity system tests

* formatting kcc system tests files

* Added to separate file

* Adding jump tests

* Fix unit tests arguments

* Removing the use of a reference inside foreach queries for u

--- a/Assets/Tests/EditModeTests/EditModeTests.asmdef
+++ b/Assets/Tests/EditModeTests/EditModeTests.asmdef
@@ -9,8 +9,12 @@
         "UnityEditor.TestRunner",
         "PropHunt.Tests.Utils",
         "PropHunt",
+        "PropHunt.Scriptable",
+        "Unity.Collections",
         "Unity.Transforms",
         "Unity.Mathematics",
+        "Unity.Physics",
+        "Unity.Networking.Transport",
         "Unity.NetCode",
         "Unity.Rendering.Hybrid"
     ],
