Updated settings and fixed connect action

--- a/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
+++ b/Assets/Tests/PlayModeTests/PlayModeTests.asmdef
@@ -14,6 +14,7 @@
         "PropHunt.Generated",
         "PropHunt.Tests.Utils",
         "PropHunt.Scriptable",
+        "Unity.Collections",
         "Unity.Transforms",
         "Unity.Mathematics",
         "Unity.NetCode",
