--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ jobs:
         projectPath:
           - ""
         unityVersion:
-          - 2020.1.5f1
+          - 2020.2.1f1
         testMode:
           # - playmode
           - editmode
@@ -49,7 +49,7 @@ jobs:
       - name: Pull lfs data, if not cached
         run: git lfs pull
 
-      - uses: webbertakken/unity-test-runner@v1.7
+      - uses: webbertakken/unity-test-runner@v2.0-alpha-1
         id: tests
         with:
           projectPath: ${{ matrix.projectPath }}
